--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,13 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>flatten-maven-plugin</artifactId>
                 <version>1.1.0</version>
+                <dependencies>
+                  <dependency>
+                    <groupId>org.codehaus.plexus</groupId>
+                    <artifactId>plexus-utils</artifactId>
+                    <version>3.0.15</version>
+                </dependency>
+            </dependencies>
                 <configuration>
                     <flattenMode>bom</flattenMode>
                 </configuration>
